--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -26,11 +26,17 @@
                         <span class="pcoded-micon"><i class="feather icon-user"></i></span>
                             <span class="pcoded-mtext">Profile Page</span></a>
                 </li>                
-                <li data-username="Profile Page" 
+                <li data-username="Tema Page" 
                     class="nav-item {% if 'kategori' in segment %} active {% endif %}">
                     <a href="/kategori" class="nav-link">
                         <span class="pcoded-micon"><i class="feather icon-user"></i></span>
                             <span class="pcoded-mtext">Tema</span></a>
+                </li>                
+                <li data-username="Search Page" 
+                    class="nav-item {% if 'kategori' in segment %} active {% endif %}">
+                    <a href="/search" class="nav-link">
+                        <span class="pcoded-micon"><i class="feather icon-user"></i></span>
+                            <span class="pcoded-mtext">Pencarian</span></a>
                 </li>                
 
                 <li data-username="Sample Page" class="nav-item"><a href="/page-blank.html" class="nav-link"><span
