--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/fonts/fontawesome/css/fontawesome-all.min.css">
     <!-- animation css -->
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/animation/css/animate.min.css">
+    <!-- sweetalert2 css -->
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/sweetalert2/sweetalert2.min.css">
     <!-- vendor css -->
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/css/style.css">
     <!-- dark mode css -->
