--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -1,4 +1,5 @@
 <script src="{{ config.ASSETS_ROOT }}/js/vendor-all.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="{{ config.ASSETS_ROOT }}/plugins/sweetalert2/sweetalert2.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/pcoded.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/dark-mode.js"></script>
