--- a/apps/templates/crud/index.html
+++ b/apps/templates/crud/index.html
@@ -35,7 +35,7 @@
                                                                     src="{{ config.ASSETS_ROOT }}/images/user/avatar-1.jpg" alt="activity-user">
                                                         </td>
                                                         <td>
-                                                            <h6 class="mb-1">Isabella Christensen</h6>
+                                                            <h6 class="mb-1">Rendi Saputra</h6>
                                                             <p class="m-0">Lorem Ipsum is simply…</p>
                                                         </td>
                                                         <td>
