perbaikan pada asset

--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -49,7 +49,7 @@
     <!-- vendor css -->
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/css/style.css" />
     <!-- dark mode css -->
-    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/css/dark.css" />
+    <!-- <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/css/dark.css" /> -->
 
     <!-- Specific CSS goes HERE -->
     {% block stylesheets %}{% endblock stylesheets %}
