--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -2,4 +2,7 @@
 <script src="{{ config.ASSETS_ROOT }}/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/plugins/sweetalert2/sweetalert2.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/pcoded.min.js"></script>
-<script src="{{ config.ASSETS_ROOT }}/js/dark-mode.js"></script>
+<!-- <script src="{{ config.ASSETS_ROOT }}/js/dark-mode.js"></script> -->
+<script>
+    document.addEventListener("mousewheel", this.mousewheel.bind(this), { passive: false });
+</script>
