buat update versi 3

--- a/apps/templates/crud/versi_1.html
+++ b/apps/templates/crud/versi_1.html
@@ -19,7 +19,8 @@ endblock %}
                     >Version 1</a
                   >
                   <a href="/index?view=v2" class="btn btn-success">Version 2</a>
-                  <a href="/index?view=v3" class="btn btn-warning">Version 3</a>
+                  <a href="/index?view=v3" class="btn btn-warning">Version 3 (Evaluasi)</a>
+                  <a href="/login" class="btn btn-info">Login</a>
                 </div>
               </div>
               <div class="card">
