--- a/apps/templates/crud/versi_2.html
+++ b/apps/templates/crud/versi_2.html
@@ -15,13 +15,11 @@ endblock %}
               <div class="card">
                 <div class="card-body">
                   <!-- Navigasi Dinamis -->
-                  <a href="/index?view=default" class="btn btn-primary"
+                  <a href="/index?view=default" class="btn btn-outline-primary"
                     >Version 1</a
                   >
-                  <a href="/index?view=v2" class="btn btn-outline-success"
-                    >Version 2</a
-                  >
-                  <a href="/index?view=v3" class="btn btn-warning">Version 3</a>
+                  <a href="/index?view=v2" class="btn btn-success">Version 2</a>
+                  <a href="/index?view=v3" class="btn btn-warning">Version 3 (Evaluasi)</a>
                   <a href="/login" class="btn btn-info">Login</a>
                 </div>
               </div>
