--- a/apps/templates/crud/versi_1.html
+++ b/apps/templates/crud/versi_1.html
@@ -1,131 +1,87 @@
-{% extends "layouts/base-fullscreen.html" %} {% block title %} Al - Quran {%
-endblock %}
+{% extends "layouts/public.html" %} {% block title %} Al - Quran {% endblock %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-<div class="pcoded-wrapper">
-  <div class="pcoded-content">
-    <div class="pcoded-inner-content">
-      <div class="main-body">
-        <div class="page-wrapper">
-          <!-- [ Main Content ] start -->
-          <div class="row" id="main-row">
-            <div class="col-sm-12">
-              <div class="card">
-                <div class="card-body">
-                  <!-- Navigasi Dinamis -->
-                  <a href="/index?view=default" class="btn btn-outline-primary"
-                    >Version 1</a
-                  >
-                  <a href="/index?view=v2" class="btn btn-success">Version 2</a>
-                  <a href="/index?view=v3" class="btn btn-warning">Version 3 (Evaluasi)</a>
-                  <a href="/login" class="btn btn-info">Login</a>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header">
-                  <h5>Pencarian Versi 1</h5>
-                </div>
-                <div class="card-body">
-                  <div class="form-group">
-                    <label for="searchQuery">Pencarian Ayat Alquran</label>
-                    <div class="input-group">
-                      <input
-                        type="text"
-                        class="form-control"
-                        id="searchQuery"
-                        value="dosa besar"
-                      />
-                      <div class="input-group-append">
-                        <button
-                          class="btn btn-primary runSearch"
-                          data-id="1"
-                          type="button"
-                        >
-                          Kata
-                        </button>
-                        <button
-                          class="btn btn-primary runSearch"
-                          data-id="3"
-                          type="button"
-                        >
-                          Semantik
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row mt-2">
-                    <div class="col-md-8">
-                      <h5 class="mb-3">
-                        Jumlah Pencarian : <span id="tdjumlah"></span>
-                      </h5>
-                      <div class="card">
-                        <div class="card-body">
-                          <div class="table-responsive">
-                            <table class="table" id="hasill">
-                              <thead>
-                                <th>Ayat</th>
-                                <th>Tema</th>
-                              </thead>
-                              <tbody id="tdhasil"></tbody>
-                            </table>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- ./col -->
-                    <div class="col-md-4">
-                      <h5
-                        class="d-flex justify-content-between align-items-center mb-3"
-                      >
-                        <span class="text-muted">Perluasan Kata</span>
-                        <span class="badge badge-secondary badge-pill">3</span>
-                      </h5>
-                      <ul class="list-group mb-3" id="daftarkata">
-                        <li
-                          class="list-group-item d-flex justify-content-between lh-condensed"
-                        >
-                          <p class="my-0">. . . . . . . . .</p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header">
-                  <h5>Kategori</h5>
-                </div>
-                <div class="card-body">
-                  <div class="mb-2">
-                    <button id="load_data" class="btn btn-primary">
-                      Reload Data
-                    </button>
-                    <button
-                      id="clearSubcategoriesBtn"
-                      class="btn btn-secondary"
-                    >
-                      Clear Subcategories
-                    </button>
-                    <div class="row" id="kategori-data">
-                      <div class="col-sm-3" data-level="1">
-                        <div class="card">
-                          <div class="card-header">
-                            <h5>Kategori</h5>
-                          </div>
-                          <ul
-                            id="main-ul"
-                            class="list-group list-group-flush kategoris"
-                          ></ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Pencarian Versi 1</h5>
+    </div>
+    <div class="card-body">
+      <div class="form-group">
+        <label for="searchQuery">Pencarian Ayat Alquran</label>
+        <div class="input-group">
+          <input type="text" class="form-control" id="searchQuery" value="dosa besar" />
+          <div class="input-group-append">
+            <button class="btn btn-primary runSearch" data-id="1" type="button" > Kata </button>
+            <button class="btn btn-primary runSearch" data-id="3" type="button" >Semantik</button>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-md-8">
+          <h5 class="mb-3">
+            Jumlah Pencarian : <span id="tdjumlah"></span>
+          </h5>
+          <div class="card">
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table" id="hasill">
+                  <thead>
+                    <th>Ayat</th>
+                    <th>Tema</th>
+                  </thead>
+                  <tbody id="tdhasil"></tbody>
+                </table>
               </div>
             </div>
-            <!-- [ Main Content ] end -->
+          </div>
+        </div>
+        <!-- ./col -->
+        <div class="col-md-4">
+          <h5
+            class="d-flex justify-content-between align-items-center mb-3"
+          >
+            <span class="text-muted">Perluasan Kata</span>
+            <span class="badge badge-secondary badge-pill">3</span>
+          </h5>
+          <ul class="list-group mb-3" id="daftarkata">
+            <li
+              class="list-group-item d-flex justify-content-between lh-condensed"
+            >
+              <p class="my-0">. . . . . . . . .</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Kategori</h5>
+    </div>
+    <div class="card-body">
+      <div class="mb-2">
+        <button id="load_data" class="btn btn-primary">
+          Reload Data
+        </button>
+        <button
+          id="clearSubcategoriesBtn"
+          class="btn btn-secondary"
+        >
+          Clear Subcategories
+        </button>
+        <div class="row" id="kategori-data">
+          <div class="col-sm-3" data-level="1">
+            <div class="card">
+              <div class="card-header">
+                <h5>Kategori</h5>
+              </div>
+              <ul
+                id="main-ul"
+                class="list-group list-group-flush kategoris"
+              ></ul>
+            </div>
           </div>
         </div>
       </div>
@@ -316,4 +272,3 @@ endblock %}
     }
   </script>
   {% endblock javascripts %}
-</div>
