--- a/apps/templates/crud/versi_2.html
+++ b/apps/templates/crud/versi_2.html
@@ -1,165 +1,107 @@
-{% extends "layouts/base-fullscreen.html" %} {% block title %} Al - Quran {%
-endblock %}
+{% extends "layouts/public.html" %} {% block title %} Al - Quran {% endblock %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-<div class="pcoded-wrapper">
-  <div class="pcoded-content">
-    <div class="pcoded-inner-content">
-      <div class="main-body">
-        <div class="page-wrapper">
-          <!-- [ Main Content ] start -->
-          <div class="row" id="main-row">
-            <div class="col-sm-12">
-              <div class="card">
-                <div class="card-body">
-                  <!-- Navigasi Dinamis -->
-                  <a href="/index?view=default" class="btn btn-outline-primary"
-                    >Version 1</a
-                  >
-                  <a href="/index?view=v2" class="btn btn-success">Version 2</a>
-                  <a href="/index?view=v3" class="btn btn-warning">Version 3 (Evaluasi)</a>
-                  <a href="/login" class="btn btn-info">Login</a>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header">
-                  <h5>Pencarian Versi 2</h5>
-                </div>
-                <div class="card-body">
-                  <div class="form-group">
-                    <label for="searchQuery">Pencarian Ayat Alquran</label>
-                    <div class="input-group">
-                      <input
-                        type="text"
-                        class="form-control"
-                        id="searchQuery"
-                        value="dosa besar"
-                      />
-                      <div class="input-group-append">
-                        <button
-                          class="btn btn-primary runSearch"
-                          data-id="1"
-                          type="button"
-                        >
-                          Kata
-                        </button>
-                        <!-- <button
-                          class="btn btn-secondary runSearch"
-                          data-id="2"
-                          type="button"
-                        >
-                          Sinonim
-                        </button> -->
-                        <button
-                          class="btn btn-primary runSearch"
-                          data-id="3"
-                          type="button"
-                        >
-                          Semantik
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row mt-2">
-                    <div class="col-md-8">
-                      <h5 class="mb-3">
-                        Jumlah Pencarian : <span id="jml"></span>
-                      </h5>
-                      <!-- Search Results -->
-                      <div id="searchResults" class="mb-4"></div>
-                    </div>
-                    <!-- ./col -->
-                    <div class="col-md-4">
-                      <div class="mb-2">
-                        <div class="card">
-                          <div class="card-body">
-                            <table class="table table-sm" id="hasill">
-                              <thead>
-                                <th>Ayat</th>
-                                <th>Total</th>
-                              </thead>
-                              <tbody>
-                                <td id="tdhasil"></td>
-                                <td id="tdjumlah"></td>
-                              </tbody>
-                            </table>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="mb-2">
-                        <h5
-                          class="d-flex justify-content-between align-items-center mb-3"
-                        >
-                          <span class="text-muted">Perhitungan MAP</span>
-                        </h5>
-                        <div class="card">
-                          <div class="card-body">
-                            <p class="my-0">
-                              Nilai MAP : <span id="realTimeMap"></span>
-                            </p>
-                            <code>= (AP(1) + AP(n)) / Jumlah</code>
-
-                            <table class="table">
-                              <thead>
-                                <tr>
-                                  <th>Ayat</th>
-                                  <th>AP</th>
-                                  <th>Skor</th>
-                                </tr>
-                              </thead>
-                              <tbody id="resultsTableBody"></tbody>
-                            </table>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="mb-2">
-                        <h5
-                          class="d-flex justify-content-between align-items-center mb-3"
-                        >
-                          <span class="text-muted">Perluasan Kata</span>
-                          <span class="badge badge-secondary badge-pill"
-                            >3</span
-                          >
-                        </h5>
-                        <ul class="list-group mb-3" id="productList">
-                          <li
-                            class="list-group-item d-flex justify-content-between lh-condensed"
-                          >
-                            <p class="my-0">. . . . . . . . .</p>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Submit Rating Button -->
-                  <button
-                    class="btn btn-primary mt-3"
-                    id="submitRating"
-                    disabled
-                  >
-                    Simpan Penilaian
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- [ Main Content ] end -->
+<div class="card">
+  <div class="card-header">
+    <h5>Pencarian Versi 2</h5>
+  </div>
+  <div class="card-body">
+    <div class="form-group">
+      <label for="searchQuery">Pencarian Ayat Alquran</label>
+      <div class="input-group">
+        <input type="text" class="form-control" id="searchQuery" value="dosa besar" />
+        <div class="input-group-append">
+          <button class="btn btn-primary runSearch" data-id="1" type="button">
+            Kata
+          </button>
+          <!-- <button
+            class="btn btn-secondary runSearch"
+            data-id="2"
+            type="button"
+          >
+            Sinonim
+          </button> -->
+          <button class="btn btn-primary runSearch" data-id="3" type="button">
+            Semantik
+          </button>
         </div>
       </div>
     </div>
+    <div class="row mt-2">
+      <div class="col-md-8">
+        <h5 class="mb-3">
+          Jumlah Pencarian : <span id="jml"></span>
+        </h5>
+        <!-- Search Results -->
+        <div id="searchResults" class="mb-4"></div>
+      </div>
+      <!-- ./col -->
+      <div class="col-md-4">
+        <div class="mb-2">
+          <div class="card">
+            <div class="card-body">
+              <table class="table table-sm" id="hasill">
+                <thead>
+                  <th>Ayat</th>
+                  <th>Total</th>
+                </thead>
+                <tbody>
+                  <td id="tdhasil"></td>
+                  <td id="tdjumlah"></td>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="mb-2">
+          <h5 class="d-flex justify-content-between align-items-center mb-3" >
+            <span class="text-muted">Perhitungan MAP</span>
+          </h5>
+          <div class="card">
+            <div class="card-body">
+              <p class="my-0">
+                Nilai MAP : <span id="realTimeMap"></span>
+              </p>
+              <code>= (AP(1) + AP(n)) / Jumlah</code>
+
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Ayat</th>
+                    <th>AP</th>
+                    <th>Skor</th>
+                  </tr>
+                </thead>
+                <tbody id="resultsTableBody"></tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="mb-2">
+          <h5 class="d-flex justify-content-between align-items-center mb-3">
+            <span class="text-muted">Perluasan Kata</span>
+            <span class="badge badge-secondary badge-pill">3</span>
+          </h5>
+          <ul class="list-group mb-3" id="productList">
+            <li class="list-group-item d-flex justify-content-between lh-condensed" >
+              <p class="my-0">. . . . . . . . .</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Submit Rating Button -->
+    <button class="btn btn-primary mt-3" id="submitRating" disabled>
+      Simpan Penilaian
+    </button>
   </div>
 </div>
+
 <!-- Modal -->
-<div
-  class="modal fade"
-  id="tampilModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="tampilModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
